--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,6 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
@@ -24,3 +18,21 @@
 hs_err_pid*
 replay_pid*
 
+# Jetbrain IDE config
+/.idea/*
+!/.idea/runConfigurations
+
+# Intellij
+mvnw
+mvnw.cmd
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
