--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,18 @@
         <servlet-name>SimpleServlet</servlet-name>
         <url-pattern>/ss</url-pattern>
     </servlet-mapping>
+
+    <context-param>
+        <param-name>dbName</param-name>
+        <param-value>jdbc:mysql://localhost:3306/shop</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbUser</param-name>
+        <param-value>root</param-value>
+    </context-param>
+    <context-param>
+        <param-name>dbPass</param-name>
+        <param-value></param-value>
+    </context-param>
+
 </web-app>
