--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,35 +3,24 @@ version: '3.8'
 services:
   mariadb:
     container_name: aio_mariadb
-    image: bitnami/mariadb:11.2.3-debian-12-r4
+    image: bitnami/mariadb:11.2.3
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - "3306:3306"
     volumes:
-      - mariadb_data:/bitnami/maria
+      - mariadb_data:/bitnami/mariadb
     restart: always
     networks:
       - aio_network
 
   phpmyadmin:
-    image: bitnami/phpmyadmin:5.2.1-debian-12-r20
+    image: bitnami/phpmyadmin:5.2.1
     container_name: aio_pma
     ports:
       - "8081:8080"
     depends_on:
       - mariadb
-    restart: always
-    networks:
-      - aio_network
-
-  tomcat:
-    container_name: aio_tomcat
-    image: tomcat:latest
-    ports:
-      - "9080:8080"
-    volumes:
-      - ./target:/usr/local/tomcat/webapps
     restart: always
     networks:
       - aio_network
