--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,11 @@
-# ---> Java
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
-
-# Jetbrain IDE config
+### IntelliJ IDEA ###
 /.idea/*
 !/.idea/runConfigurations
+#*.iml
+*.iws
+*.ipr
 
-# Intellij
-mvnw
-mvnw.cmd
-
-# Maven
+### Maven ###
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+.mvn/
+mvnw*
