--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,10 @@
 
 ### Maven ###
 target/
-.mvn/
-mvnw*
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### Mac OS ###
+.DS_Store
